--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
-  "main": "index.js",
+  "main": "index.cjs",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.0",
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
